--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splitbee/web": "^0.3.0",
     "joi": "^17.6.0",
+    "mongodb": "^4.8.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
