--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@splitbee/web": "^0.3.0",
+    "framer-motion": "^6.5.1",
     "joi": "^17.6.0",
     "next": "12.2.2",
     "react": "18.2.0",
